User 레이어 구현, 스프링 시큐리티 통합